--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@tippyjs/react": "^4.2.6",
     "aos": "^2.3.4",
     "axios": "^1.6.5",
     "babel-plugin-macros": "^3.1.0",
@@ -29,7 +30,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
+    "react-tippy": "^1.4.0",
     "react-toastify": "^10.0.4",
+    "tippy.js": "^6.3.7",
     "yup": "^1.3.3"
   },
   "devDependencies": {
